--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>webpack</title>
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
+    <title>MARVEL HEROES</title>
   </head>
   <body>
     <div id="app"></div>
